<resources>
    <string name="app_name">Calculator</string>
    <string name="Example" translatable="false">Your example</string>
    <string name="answer">Answer</string>
    <string name="answer_is_wrong">Your answer is wrong! \n Try once more</string>
    <string name="Answer_is_correct">Your answer is correct!</string>
    <string name="users_answer">Your answer:</string>
    <string name="create_example">create a new example</string>
    <string name="choose_math_sign">Choose a math sign</string>
    <string name="warningForUser">You need to choose a math sign before use this button</string>
    <string name="warningForUserNull">You need to write your answer before use this button</string>
</resources>